--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
                 <version>2.5.2</version>
                 <configuration>
                     <from>
-                        <image>gcr.io/distroless/java:11</image>
+                        <image>openjdk:11</image>
                     </from>
                     <to>
                         <image>${docker.image}</image>
