--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,7 +1,7 @@
 name: Test and build
 on: [push]
 jobs:
-  Test against various java installations:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
