--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,8 +5,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        distribution: [ 'zulu', 'adopt' ]
-        java: [ '8', '11', '13', '15' ]
+        distribution: 'adopt'
+        java: [ '8', '11','15' ]
     name: Java ${{ matrix.Java }} (${{ matrix.distribution }}) sample
     steps:
       - uses: actions/checkout@v2
@@ -19,13 +19,14 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: test
 
     steps:
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
-        distribution: '<distribution>'
+        distribution: 'adopt'
         java-version: '11'
 
     - name: Build with Maven
