Added missing bracket

--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -5,7 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        distribution: 'adopt'
+        distribution: ['adopt']
         java: [ '8', '11','15' ]
     name: Java ${{ matrix.Java }} (${{ matrix.distribution }}) sample
     steps:
