--- a/.github/workflows/snapshot-build.yml
+++ b/.github/workflows/snapshot-build.yml
@@ -42,6 +42,9 @@ jobs:
       with:
         distribution: 'adopt'
         java-version: '11'
+        server-id: ossrh
+        server-username: MAVEN_USERNAME
+        server-password: MAVEN_PASSWORD
 
     - id: install-secret-key
       name: Install gpg secret key
