--- a/.github/workflows/snapshot-build.yml
+++ b/.github/workflows/snapshot-build.yml
@@ -6,36 +6,18 @@ on:
     tags-ignore:
       - '*'
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        distribution: ['adopt']
-        java: [ '8', '11','15' ]
-    name: Java ${{ matrix.Java }} (${{ matrix.distribution }}) sample
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Cache local Maven repository
-        uses: actions/cache@v2
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
-
-      - name: Setup java
-        uses: actions/setup-java@v2
-        with:
-          distribution: ${{ matrix.distribution }}
-          java-version: ${{ matrix.java }}
-      - run: mvn --batch-mode --update-snapshots test
-
   build:
     runs-on: ubuntu-latest
     needs: test
 
     steps:
     - uses: actions/checkout@v2
+
+    - id: install-secret-key
+      name: Install gpg secret key
+      run: |
+        cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
+        gpg --list-secret-keys --keyid-format LONG
 
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -46,11 +28,9 @@ jobs:
         server-username: MAVEN_USERNAME
         server-password: MAVEN_PASSWORD
 
-    - id: install-secret-key
-      name: Install gpg secret key
+    - name: Debug
       run: |
-        cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}") | gpg --batch --import
-        gpg --list-secret-keys --keyid-format LONG  
+        cat /home/runner/.m2/settings.xml
 
     - name: Cache local Maven repository
       uses: actions/cache@v2
