--- a/.github/workflows/snapshot-build.yml
+++ b/.github/workflows/snapshot-build.yml
@@ -23,10 +23,6 @@ jobs:
         gpg-private-key: ${{ secrets.OSSRH_GPG_SECRET_KEY }}
         gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
-    - name: debug
-      run: |
-        cat /home/runner/.m2/settings.xml
-
     - id: publish-to-central
       name: Publish to Central Repository
       env:
@@ -40,3 +36,22 @@ jobs:
           --batch-mode \
           -Dgpg.passphrase=${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }} \
           clean deploy
+
+    - name: Set up JDK 11
+      uses: actions/setup-java@v2
+      with:
+        distribution: 'adopt'
+        java-version: '11'
+        server-id: registry.hub.docker.com
+        server-username: DOCKER_USERNAME
+        server-password: DOCKER_PASSWORD
+
+    - id: publish-to-docker
+      name: Publish to Docker (using jib)
+      env:
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_USERNAME }}
+      run: |
+        mvn \
+          --batch-mode \
+          jib:build
