--- a/.github/workflows/snapshot-build.yml
+++ b/.github/workflows/snapshot-build.yml
@@ -46,6 +46,10 @@ jobs:
         server-username: DOCKER_USERNAME
         server-password: DOCKER_PASSWORD
 
+    - name: debug
+      run: |
+        cat /home/runner/.m2/settings.xml
+
     - id: publish-to-docker
       name: Publish to Docker (using jib)
       env:
@@ -55,3 +59,10 @@ jobs:
         mvn \
           --batch-mode \
           jib:build
+
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
