Added release github action

--- a/pom.xml
+++ b/pom.xml
@@ -262,6 +262,15 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.9.1</version>
             </plugin>
+
+            <plugin>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>${maven-release-plugin.version}</version>
+                <configuration>
+                    <scmCommentPrefix>[skip ci] [maven-release-plugin] </scmCommentPrefix>
+                    <tagNameFormat>@{project.version}</tagNameFormat>
+                </configuration>
+        </plugin>
         </plugins>
     </build>
 </project>
