--- a/pom.xml
+++ b/pom.xml
@@ -265,7 +265,7 @@
 
             <plugin>
                 <artifactId>maven-release-plugin</artifactId>
-                <version>${maven-release-plugin.version}</version>
+                <version>2.5.3</version>
                 <configuration>
                     <scmCommentPrefix>[skip ci] [maven-release-plugin] </scmCommentPrefix>
                     <tagNameFormat>@{project.version}</tagNameFormat>
