--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build and Test
         uses: qcastel/github-actions-maven-cmd@master
         with:
-          maven-args: "clean install -Ddockerfile.skip -DdockerCompose.skip -Djib.skip"
+          maven-args: "clean test -Ddockerfile.skip -DdockerCompose.skip -Djib.skip"
 
       - name: Release
         uses: qcastel/github-actions-maven-cmd@master
