Changed release branch name to main

--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -34,6 +34,7 @@ jobs:
         env:
           JAVA_HOME: /usr/lib/jvm/java-11-openjdk/
         with:
+          release-branch-name: "main"
           maven-args: "jib:build -Dmaven.javadoc.skip=true -DskipTests -DskipITs -Dmaven.deploy.skip=true"
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
           
