--- a/.github/workflows/release-build.yml
+++ b/.github/workflows/release-build.yml
@@ -44,6 +44,7 @@ jobs:
           gpg-enabled: "true"
           gpg-key-id: ${{ secrets.GPG_KEY_ID }}
           gpg-key: ${{ secrets.GPG_KEY }}
+          gpg-passphrase: ${{ secrets.OSSRH_GPG_SECRET_KEY_PASSWORD }}
           
           docker-registry-id: registry.hub.docker.com
           docker-registry-username: ${{ secrets.DOCKER_USERNAME }}
