--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,14 @@
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>3.1.2</version>
+                <executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>build</goal>
+						</goals>
+					</execution>
+				</executions>
                 <configuration>
                     <from>
                         <image>gcr.io/distroless/java:11</image>
