--- a/.github/workflows/snapshot-build.yml
+++ b/.github/workflows/snapshot-build.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         registry: registry.hub.docker.com
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASWORD }}
     
     - name: Cache local Maven repository
       uses: actions/cache@v2
