--- a/.github/workflows/snapshot-build.yml
+++ b/.github/workflows/snapshot-build.yml
@@ -26,9 +26,8 @@ jobs:
     - name: Log in to the Container registry
       uses: docker/login-action@v1
       with:
-        registry: registry.hub.docker.com
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASWORD }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
     
     - name: Cache local Maven repository
       uses: actions/cache@v2
