Updated logic for action

--- a/.github/workflows/scan-container.yaml
+++ b/.github/workflows/scan-container.yaml
@@ -5,7 +5,9 @@ on:
       - main
     tags-ignore:
       - '*'
-
+  pull_request:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
