--- a/pom.xml
+++ b/pom.xml
@@ -119,7 +119,7 @@
                 <version>3.1.4</version>
                 <executions>
 					<execution>
-						<phase>package</phase>
+						<phase>deploy</phase>
 						<goals>
 							<goal>build</goal>
 						</goals>
@@ -247,26 +247,6 @@
                 <configuration>
                     <generateGitPropertiesFile>true</generateGitPropertiesFile>
                     <offline>true</offline>
-                </configuration>
-            </plugin>
-
-            <plugin>
-                <groupId>io.github.parj</groupId>
-                <artifactId>createk8syaml-maven-plugin</artifactId>
-                <version>0.0.5</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>generate</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <namespace>app-namespace</namespace>
-                    <image>${docker.image}</image>
-                    <port>${app.port}</port>
-                    <path>/hello</path>
                 </configuration>
             </plugin>
             <plugin>
