--- a/.github/workflows/snapshot-build.yml
+++ b/.github/workflows/snapshot-build.yml
@@ -19,7 +19,8 @@ jobs:
     permissions:
       contents: read
       steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Set up JDK
         uses: actions/setup-java@v2
@@ -40,7 +41,8 @@ jobs:
 
       if: ${{ github.event.workflow_run.conclusion == 'success' }}
       steps:
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       - name: Set up JDK
         uses: actions/setup-java@v2
