--- a/.github/workflows/code-analysis.yaml
+++ b/.github/workflows/code-analysis.yaml
@@ -39,6 +39,13 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
+    - name: Cache local Maven repository
+      uses: actions/cache@v2
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-m2codeql-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2codeql
+
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
