--- a/.github/workflows/pull-tests.yml
+++ b/.github/workflows/pull-tests.yml
@@ -16,8 +16,8 @@ jobs:
         uses: actions/cache@v2
         with:
           path: ~/.m2/repository
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          key: ${{ runner.os }}-m2pull-${{ hashFiles('**/pom.xml') }}
+          restore-keys: ${{ runner.os }}-m2pull
 
       - name: Setup java
         uses: actions/setup-java@v2
