--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -23,6 +23,6 @@ version: 0.1.0
 appVersion: "1.24"
 
 dependencies:
-- name: react-java/java
+- name: java
   version: 0.1.0
   repository: https://qwakumuller.github.io/Helms/chart/
