--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -23,6 +23,6 @@ version: 0.1.0
 appVersion: "1.24"
 
 dependencies:
-- name: java
+- name: simple-website
   version: 0.1.0
-  repository: https://qwakumuller.github.io/Helms/chart/
+  repository: https://4allportal.github.io/helm-charts
