--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -23,6 +23,6 @@ version: 0.1.0
 appVersion: "1.24"
 
 dependencies:
-- name: simple-website
-  version: 1.0.0
-  repository: https://4allportal.github.io/helm-charts
+- name: java
+  version: 0.1.0
+  repository: https://qwakumuller.github.io/Helms/chart/
