--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,7 +1,8 @@
-labelName: java
-containerName: java
-metadataName: samlespringbootapp
-imageName: parjanya/samplespringbootapp:1.16
+java:
+  labelName: java
+  containerName: java
+  metadataName: springbootapp
+  imageName: parjanya/samplespringbootapp:1.16
 
-service:
-  port: 9999
+  service:
+    port: 9999
