--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -23,6 +23,7 @@ version: 0.1.0
 appVersion: "1.24"
 
 dependencies:
-- name: java
-  version: 0.1.0
-  repository: https://qwakumuller.github.io/Helms/chart/
+  - name: java
+    version: 4.1.0
+    repository: 'https://hmctspublic.azurecr.io/helm/v1/repo/'
+  
